Overlap line fixed!!

--- a/frontend-angular/src/app/dashboard/dashboard-grower/dashboard-grower.component.css
+++ b/frontend-angular/src/app/dashboard/dashboard-grower/dashboard-grower.component.css
@@ -39,6 +39,7 @@ hr {
   margin: 1rem auto;
   border-top: 1px solid gray;
   opacity: 60%;
+  z-index: 1;
 }
 
 .title {
